# toraheval

./: .gitignore  LICENSE  Q1-dataset.json  README.md  evaluators.py  langsmith_evaluation.py  main.py  pyproject.toml  targets.py
.github/workflows/: conventional-pr.yaml  ruff.yaml
dataset/: Q1-dataset.json  convert_csv_to_json.py  dataset.csv  updated_dataset.csv
src/toraheval/: main.py
targets/: __init__.py  anthropic_js_api_target.py  anthropic_targets.py  ituria_js_api_target.py  ituria_target.py  simple_target.py
targets/anthropic-js/: README.md  package-lock.json  package.json  server.js
targets/ituria-js/: package-lock.json  package.json  server.js
