[project]
name = "toraheval"
version = "0.1.0"
description = "Torah AI evaluation framework"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.64.0",
    "langchain-anthropic>=0.3.19",
    "langsmith>=0.4.16",
    "openai>=1.101.0",
    "openevals>=0.1.0",
    "python-dotenv>=1.1.1",
    "mcp>=1.1.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "langchain>=0.3.19",
    "langchain-community>=0.3.19",
    "requests>=2.31.0",
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
]

[tool.ruff.lint]
select = ["F", "E", "W", "I", "N", "D", "UP", "PLR"]
ignore = ["D213", "D203"]
